--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ Concierge Housekeepers Waitstaff / Server Cooks Dishwashers </p>
 									<p>Atria Senior Living
 									</br>Phone: (770) 650-9577
 									</br>Address: 100 Somerby Dr, Alpharetta, GA 30009
-									</br>Website: <a href="www.atriaseniorliving.com " target="_blank">www.atriaseniorliving.com </a>
+									</br>Website: <a href="http://www.atriaseniorliving.com " target="_blank">www.atriaseniorliving.com </a>
 								</p>						
 						</div>
 						<div class="modal-footer">
