Message in submit

--- a/submit.html
+++ b/submit.html
@@ -48,6 +48,12 @@
     <center><div class="navbar " style="color:white; align:center; background-color: #FF9898; border-radius: 0;">
       <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
     </div></center>
+  </div>
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <center><div class="navbar " style="color:white; align:center; background-color: #FF9898; border-radius: 0;">
+      <h5 style="text-align: center; align:center;"><b>When you click submit, make sure you see a Google Drive confirmation that your data was recieved.</b></h5>
+    </div></center>
   </div><!-- /.container-fluid -->
 </nav>
 		<!--<form role="form" class="adForm">
