--- a/index.html
+++ b/index.html
@@ -573,6 +573,78 @@ Concierge Housekeepers Waitstaff / Server Cooks Dishwashers </p>
 				</div>
 			</div>	
 		</div>
+        
+        <div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
+        <div class="panel" style="display: block;" >        
+                <div align=center class="buttons" style="display: block;"> 
+                    <a class="btn btn-lg btn-default job-button" style = "background-image: url('media/cakes.jpg');" data-toggle="modal" data-target="#Modal13" ><!--Background Image and Modal Id-->
+                    <div >
+                        <h4 class = "btn-text" style="position:relative; top: 190px;">
+                            Nothing Bundt Cakes
+                        </h4>
+                    </div>
+                    </a>                        
+                    <br>
+                </div>
+        </div>  
+        <div class="modal fade" id="Modal13" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><!--Change Modal ID-->
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h2 class="modal-title" id="myModalLabel">Nothing Bundt Cakes</h2><!--Popup Header-->
+                    </div>
+                    <div class="modal-body">
+                        <h3>Description</h3><!--Description-->
+                            <p> The dishwasher/utility team member is responsible for washing the baking and
+frosting departments’ dishes and cleaning the bakery. Cleaning includes: floors,
+walls, bathrooms, shelves, etc. During downtime the dishwasher folds boxes, labels
+containers and assists other departments.
+Abide by all NBC policies and procedures.</p>
+<ul>
+	<li>Uphold the NBC image and brand</li>
+<li>Assist other departments when necessary</li>
+<li>Wash all dishes from the baking and frosting departments</li>
+<li>Clean bathrooms</li>
+<li>Keep walls, floors, shelves and surfaces clean</li>
+<li>Clean refrigerator and cooler units</li>
+<li>Fold boxes and label containers as directed</li>
+<li>Take out trash/boxes</li>
+<li>Clean floor drains</li>
+<li>Assist baker and froster with daily tasks</li>
+<li>Clean windows</li>
+</ul>
+                        <h3>Requirements</h3><!--Requirements-->
+                        <ul>
+                            <li>Possess a strong sense of teamwork</li>
+<li>Ability to follow instructions</li>
+<li>Has integrity</li>
+<li>Takes initiative</li>
+<li>Fits the Nothing Bundt Cakes culture</li>
+<li>Works well under pressure</li>
+<li>Has physical stamina</li>
+<li>Likes doing repetitious work</li>
+<li>Has a strong sense of pride in his work</li>
+<li>Understands the importance of maintaining a clean work area</li>
+<li>Wears the required uniform (khaki or brown pants and provided NBC shirt)</li>
+                        </ul>
+                        <h3>How to Apply</h3><!--Apply-->
+                            <p>Please send your request to Alpharetta@nothingbundtcakes.com	</p>
+                        <h3>Contact</h3><!--Contact-->
+                                <p>Nothing Bundt Cakes
+                                </br>Phone: 6783661445
+                                </br>Email Address: alpharetta@nothingbundtcakes.com	
+                                </br>Website: <a href="http://www.nothingbundtcakes.com" target="_blank">http://www.nothingbundtcakes.com
+</a>
+                            </p>                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </div>
 		<!--Place Here-->
 		
 	</div>
