--- a/index.html
+++ b/index.html
@@ -615,6 +615,7 @@ Abide by all NBC policies and procedures.</p>
 <li>Assist baker and froster with daily tasks</li>
 <li>Clean windows</li>
 </ul>
+</br>Pay is $10 per hour
                         <h3>Requirements</h3><!--Requirements-->
                         <ul>
                             <li>Possess a strong sense of teamwork</li>
