--- a/submit.html
+++ b/submit.html
@@ -45,16 +45,11 @@
 	<nav class="navbar" style="text-align:center; " role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <center><div class="navbar " style="color:white; align:center; background-color: #FF9898; border-radius: 0;">
-      <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
+    <center><div class="navbar " style="color:white; align:center; background-color: #FF9898; border-radius: 0; padding-bottom:10px;">
+      <h5 style="text-align: center; align:center; margin-bottom:0px;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
+	  </br><b>When you click submit, make sure you see a Google Drive confirmation that your data was received.</b>
     </div></center>
   </div>
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <center><div class="navbar " style="color:white; align:center; background-color: #FF9898; border-radius: 0;">
-      <h5 style="text-align: center; align:center;"><b>When you click submit, make sure you see a Google Drive confirmation that your data was recieved.</b></h5>
-    </div></center>
-  </div><!-- /.container-fluid -->
 </nav>
 		<!--<form role="form" class="adForm">
 			  <div class="form-group">
@@ -116,9 +111,11 @@
 			  
 			  <button type="submit" class="btn btn-default">Submit</button> 
 		</form>-->
-		<iframe src="https://docs.google.com/forms/d/1dGZ9RO_l2qIde3Mlal_J4uRwvK8VtAVOu_8yBi3yA3M/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<center><iframe src="https://docs.google.com/forms/d/1dGZ9RO_l2qIde3Mlal_J4uRwvK8VtAVOu_8yBi3yA3M/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
+		
+	
 	</div>
-
+	
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
