--- a/index.html
+++ b/index.html
@@ -601,6 +601,70 @@ Abide by all NBC policies and procedures.</p>
             </div>
         </div>  
     </div>
+	
+	<div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
+			<div class="panel" style="display: block;" >		
+					<div align=center class="buttons" style="display: block;"> 
+						<a class="btn btn-lg btn-default job-button" style = "background-image: url('media/nfcc.png');" data-toggle="modal" data-target="#Modal14" ><!--Background Image and Modal Id-->
+						<div >
+							<h4 class = "btn-text" style="position:relative; top: 190px;">
+								North Fulton Community Charities
+							</h4>
+						</div>
+						</a>						
+						<br>
+					</div>
+			</div>	
+			<div class="modal fade" id="Modal14" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><!--Change Modal ID-->
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h2 class="modal-title" id="myModalLabel">Internships at NFCC</h2><!--Popup Header-->
+						</div>
+						<div class="modal-body">
+							<h3>Description</h3><!--Description-->
+								<p> Are you looking for business experience, professional connections and unique opportunities? Become an intern at North Fulton Community Charities (NFCC). With over 4,000 volunteers serving annually, we rely on dedicated, compassionate interns to help us accomplish our mission.</p>
+								<p>The goal of our internship program is to expose our interns to all areas of our organization. This is a very business focused internship. Interns will experience the daily operations of all departments. They will begin with an agency overview and work within their selected department supporting our mission and learning as they perform various tasks.</p>
+								<p>Interns commit to a regular schedule in a specific department for a short period of time (3-6 months). If you cannot commit to a regular schedule, we encourage you to apply to become a regular volunteer.</p>
+								<p>Completing an internship for school credit? We require our interns to obtain all necessary approvals and required documentation prior to beginning the internship. Credit hours, objectives, and goals will be tracked according to school requirements by the selected Department Supervisor or Manager at North Fulton Community Charities.</p>
+								<p>This invaluable opportunity is available to High School TAG students and College enrolled students.  All Internships are unpaid.</p>
+								<h3>Available Internships</h3>
+								<ul>
+									<li>Finance, Human Resources, Technology and Data Management </li>
+									<li>Development, Fundraising, Marketing, and Communications </li>
+									<li>Family Enrichment, Education, Programs and Volunteer Management </li>
+								</ul>	
+								
+							
+							<h3>Requirements</h3><!--Requirements-->
+							<ul>
+								<li>Age 17 years or older</li>
+								<li>Currently enrolled High School TAG Student or College Enrolled Student</li>
+								<li>Ability to attend all training sessions and intern on a minimum of 20 hours per week on regular weekly schedule for 3-6 months</li>
+								<li>Submission of application and required paperwork</li>
+								<li>Satisfactory completion of a background and drug check</li>
+								<li>Willingness to follow the Internship Code of Conduct of North Fulton Community Charities</li>
+								<li>Ability to work in a culturally diverse environment with respect and compassion</li>
+								<li>Acknowledgement of confidentiality</li>
+							</ul>
+							<h3>How to Apply</h3><!--Apply-->
+								<p>Applications are accepted from August 1st through April 30th. <a href="http://www.nfcchelp.org/volunteer/internship/internship-application/" target="_blank">Click Here</a> to complete the online Internship Application. Include a cover letter and resume. Applicants will be contacted within 30 days of receipt of their completed application.</p>
+							<h3>Contact</h3><!--Contact-->
+									<p>North Fulton Community Charities
+									</br>Phone: 770-640-0399
+									</br>Email:  gethelp@nfcchelp.org
+									</br>Address: 11270 Elkins Rd., Roswell, Georgia 30076
+									</br>Website: <a href="http://www.nfcchelp.org" target="_blank"> www.nfcchelp.org</a>
+								</p>						
+						</div>
+						<div class="modal-footer">
+							<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>
 		<!--Place Here-->
 
   </div><!-- /.container-fluid -->
